--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
     "fs-extra": "^4.0.2",
-    "rimraf": "^2.6.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   }
 }
