[feature] Script support added to deploy to ghpages and pushing to master branch

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "./node_modules/.bin/webpack --progress --config webpack.config.js --env prod",
     "postbuild": "node scripts/postbuild.js",
     "publish": "git subtree push --prefix demo origin gh-pages",
+    "release:master": "git checkout master && git merge --squash develop && git commit -am 'Release Commit'",
     "release:bugfix": "npm version patch -m 'Bumped patch version number'",
     "release:feature": "npm version minor -m 'Bumped minor version number'",
     "release:breakingchange": "npm version major -m 'Bumped major version number'",
-    "postversion": "git push origin HEAD --follow-tags"
+    "postversion": "git push origin HEAD --follow-tags",
+    "deploy": "npm run build && git commit -am 'Deploy Commit' && git push && git subtree push --prefix demo origin gh-pages"
   },
   "author": "Sanjay Krishna Anbalagan",
   "license": "MIT",
