updated webpack to 4

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Boilerplate for React JS App",
   "scripts": {
     "postinstall": "node scripts/postinstall.js ",
-    "start": "./node_modules/.bin/webpack-dev-server --progress --config webpack.config.js --open",
+    "start": "./node_modules/.bin/webpack-dev-server --open --mode development",
     "lint": "./node_modules/.bin/eslint ./src --ext .js --cache --fix --ext .jsx --cache --fix",
     "prebuild": "rimraf lib && rimraf demo",
-    "build": "./node_modules/.bin/webpack --progress --config webpack.config.js --env prod",
+    "build": "./node_modules/.bin/webpack --mode production",
     "postbuild": "node scripts/postbuild.js",
     "publish": "git subtree push --prefix demo origin gh-pages",
     "release:master": "git checkout master && git merge --squash develop && git commit -am 'Release Commit'",
@@ -21,21 +21,22 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.6.1",
-    "eslint-loader": "^1.9.0",
-    "fs-extra": "^4.0.2",
-    "prop-types": "^15.5.10",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-loader": "^2.1.0",
+    "fs-extra": "^7.0.0",
+    "prop-types": "^15.6.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
